WR-1035: Search bar replacement - alignment fixes

--- a/ui.apps/src/main/content/jcr_root/etc/designs/nhmwww/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/etc/designs/nhmwww/css/styles.css
@@ -7739,6 +7739,12 @@ body.noScroll {
   z-index: 99;
 }
 
+@media screen and (min-width: 1025px) {
+  .megamenu--search-bar__content {
+    padding-top: 51px;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .megamenu--search-bar__content {
     height: 350px;
@@ -7754,9 +7760,16 @@ body.noScroll {
   width: 27px;
 }
 
+@media screen and (min-width: 1025px) {
+  .megamenu--search-bar__close-icon {
+    right: 17px;
+  }
+}
+
 .megamenu--search-bar__form {
   text-align: center;
-  height: 50px;
+  display: flex;
+  justify-content: center;
   margin-bottom: 50px;
 }
 
@@ -7774,6 +7787,12 @@ body.noScroll {
   border: 2px solid #000000;
 }
 
+@media screen and (min-width: 1025px) {
+  .megamenu--search-bar__input[type="text"] {
+    height: 47px;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .megamenu--search-bar__input[type="text"] {
     width: 250px;
@@ -7784,20 +7803,26 @@ body.noScroll {
   background-color: #000000;
   height: 50px;
   width: 50px;
+  padding: 0;
   margin-bottom: 0;
   margin-left: -5px;
-  padding: 0;
-  font-size: 30px;
 }
 
 .megamenu--search-bar__submit-button:hover {
   background-color: #000000;
 }
 
+@media screen and (min-width: 1025px) {
+  .megamenu--search-bar__submit-button {
+    height: 47px;
+    width: 47px;
+  }
+}
+
 .megamenu--search-bar__search-icon {
   stroke-width: 2;
-  height: 38px;
-  width: 38px;
+  height: 36px;
+  width: 36px;
 }
 
 .megamenu--search-bar__popular-search-terms {
